<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.danielfariati</groupId>
	<artifactId>comente-sobre</artifactId>
	<version>1.0</version>
	<packaging>war</packaging>

	<developers>
		<developer>
			<id>danielfariati</id>
			<name>Daniel Faria Gomes</name>
			<email>danielfariati@gmail.com</email>
			<url>https://github.com/danielfariati</url>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/danielfariati/comente-sobre</url>
		<connection>scm:git:git://github.com/danielfariati/comente-sobre.git</connection>
		<developerConnection>scm:git:git@github.com:danielfariati/comente-sobre.git</developerConnection>
	</scm>

	<dependencies>
		<!-- Production -->
		<dependency>
		    <groupId>br.com.caelum</groupId>
		    <artifactId>vraptor</artifactId>
		    <version>3.4.1</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>4.1.4.Final</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>4.1.4.Final</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.3.0.Final</version>
		</dependency>

		<dependency>
		    <groupId>org.hsqldb</groupId>
		    <artifactId>hsqldb</artifactId>
		    <version>2.2.8</version>
		</dependency>

		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>sitemesh</artifactId>
			<version>2.4.2</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Provided -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>servlet-api</artifactId>
			<version>6.0.35</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.dbunit</groupId>
			<artifactId>dbunit</artifactId>
			<version>2.4.8</version>
			<scope>test</scope>
		</dependency>

		<dependency>
		    <groupId>org.jstryker</groupId>
		    <artifactId>jstryker</artifactId>
		    <version>1.0.3</version>
		    <scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.43.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>2.43.0</version>
			<scope>test</scope>
			<exclusions>
			    <exclusion>
			        <groupId>org.mortbay.jetty</groupId>
			        <artifactId>servlet-api-2.5</artifactId>
			    </exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
				    <port>8080</port>
				    <path>/comente-sobre</path>
				</configuration>
				<executions>
					<execution>
						<id>tomcat-run</id>
						<goals>
							<goal>run-war-only</goal>
						</goals>
						<phase>pre-integration-test</phase>
						<configuration>
						    <fork>true</fork>
						</configuration>
					</execution>
					<execution>
						<id>tomcat-shutdown</id>
						<goals>
							<goal>shutdown</goal>
						</goals>
						<phase>post-integration-test</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<executions>
					<execution>
						<id>default-test</id>
						<configuration>
						    <includes>
						        <include>**/*ControllerTest*</include>
						        <include>**/*BusinessTest*</include>
						    </includes>
						</configuration>
					</execution>
					<execution>
						<id>surefire-it</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
						    <includes>
						        <include>**/SeleniumTestCase*</include>
						    </includes>
							<skipTests>false</skipTests>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<argLine>-Xms256M -Xmx768M -XX:MaxPermSize=256M</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.5.1</version>
			</plugin>
		</plugins>
	</reporting>

</project>
